# paper-writer

./: .gitignore  README.md  __main__.py  agent.py  app.py  config.py  prompts.py  pyproject.toml  state.py  ui.py
.assistant-memory/: PROJECT_STATE.md  README.md  WORK_LOG.md
